examples/solidity/bad/testargs.sol
contract Abstract {
  function f() pure public {}
  function echidna_f(int x) pure public returns (int) {return 0;}
}
